# frontend

./: .gitignore  CMakeLists.txt  Makefile
shaders/: background_frag.glsl  background_vert.glsl  frame_frag.glsl  frame_vert.glsl  image_frag.glsl  image_vert.glsl  marquee_vert.glsl
src/: Config.cpp  Config.h  Context.cpp  Context.h  Context_Pi.c  Context_Pi.cpp  Exceptions.hpp  GameManager.cpp  GameManager.h  Message.h  Scrapper.cpp  Scrapper.cpp.old  Scrapper.h  gl_inc.h  main.cpp
src/core/: Event.h  Exceptions.hpp  GraphicObject.cpp  GraphicObject.h  GraphicObject.hpp  Object.cpp  Object.h  Object.hpp  ObjectMap.h  Program.cpp  Program.h  Program.hpp  Text.cpp  Text.h  Text.hpp  Texture.cpp  Texture.h  Texture.hpp
src/gfx/: Mesh.cpp  Mesh.hpp  Mesh.inl
src/objects/: Background.cpp  Background.h  IconGrid.cpp  IconGrid.h  Image.cpp  Image.h  ItemList.cpp  ItemList.h  Label.cpp  Label.h  Marquee.cpp  Marquee.h  Text.cpp  Text.h
src/shader/: background_frag.glsl  background_vert.glsl  image_frag.glsl  image_vert.glsl  marquee_frag.glsl  marquee_vert.glsl
src/ui/: Background.cpp  Background.hpp  Frame.cpp  Frame.hpp  Image.cpp  Image.hpp  Label.cpp  Label.hpp  Marquee.cpp  Marquee.hpp  Plane.cpp  Plane.hpp  ScrollingList.cpp  ScrollingList.hpp
